# normalize_uk-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release-wheels.yml
benchmarks/: uktextnorm_benchmark.cpp
bindings/python/: normalize_uk.cpp
bindings/python/normalize_uk/: __init__.py  __init__.pyi
cmake/: Format.cmake
examples/python/: basic_usage.py  options_and_spans.py
include/rozpodil/: rozpodil.hpp
include/uktextnorm/: uktextnorm.hpp
src/common/: utf8.hpp
src/rozpodil/: rozpodil.cpp
src/uktextnorm/: uktextnorm.cpp
tests/: rozpodil_tests.cpp  uktextnorm_robustness_tests.cpp  uktextnorm_tests.cpp
tests/data/: rozpodil_sample.txt  uktextnorm_cli_input.txt  uktextnorm_cli_lines.txt  uktextnorm_cli_uncertain_lines.txt  uktextnorm_domain_golden.tsv  uktextnorm_golden.tsv
tools/: rozpodil_cli.cpp  uktextnorm_cli.cpp
